--- a/UI Components/contact form/form.html
+++ b/UI Components/contact form/form.html
@@ -34,13 +34,11 @@
 			  
                <div class="control-group">
                  <div class="controls">
-			<textarea rows="10" cols="100" style="resize:none" class="form-control"
-			   	     	placeholder="Message" id="message" required
-			   		data-validation-required-message="Please enter your message" 
-			   		minlength="5" 
-			   		data-validation-minlength-message="Min 5 characters" 
-			   		 maxlength="999" />
-			</textarea>	
+				 <textarea rows="10" cols="100" class="form-control" 
+                       placeholder="Message" id="message" required
+		       data-validation-required-message="Please enter your message" minlength="5" 
+                       data-validation-minlength-message="Min 5 characters" 
+                        maxlength="999" style="resize:none"></textarea>
 		</div>
                </div> 		 
 	     <div id="success"> </div> <!-- For success/fail messages -->
